--- a/src/main/resources/view/PlayerState.fxml
+++ b/src/main/resources/view/PlayerState.fxml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" prefHeight="500.0" prefWidth="160.0"
-      xmlns="http://javafx.com/javafx/10.0.2-internal">
+      style="-fx-background-color: #aaaaaa;" xmlns="http://javafx.com/javafx/10.0.2-internal">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" text="0">
          <font>
