--- a/src/main/resources/view/MenuView.fxml
+++ b/src/main/resources/view/MenuView.fxml
@@ -1,8 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
-<?import javafx.scene.layout.BorderPane?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="640.0" prefWidth="900.0"
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="640.0" prefWidth="900.0" styleClass="menu_pane"
             xmlns="http://javafx.com/javafx/10.0.2-internal">
-
-</BorderPane>
+   <children>
+      <HBox alignment="CENTER" layoutX="401.0" layoutY="538.0" AnchorPane.bottomAnchor="50.0"
+            AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+         <children>
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#onPlayClicked"
+                    style="-fx-padding: 14; -fx-background-radius: 2;" text="Играть">
+               <font>
+                  <Font size="19.0"/>
+               </font>
+            </Button>
+         </children>
+      </HBox>
+   </children>
+</AnchorPane>
